// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FlexBox> Snapshots and structure should render story 'Align' 1`] = `
Array [
  <div
    className="lumx-flex-box lumx-flex-box--orientation-horizontal lumx-flex-box--v-align-center lumx-flex-box--h-align-center"
  >
    <Button
      emphasis="high"
      size="m"
      style={
        Object {
          "height": 200,
        }
      }
      theme="light"
    >
      Button
    </Button>
    <FlexBox
      style={
        Object {
          "height": "fit-content",
        }
      }
    >
      Some text
    </FlexBox>
  </div>,
  <div
    className="lumx-flex-box"
    style={
      Object {
        "height": "fit-content",
      }
    }
  >
    Some text
  </div>,
]
`;

exports[`<FlexBox> Snapshots and structure should render story 'Flex' 1`] = `
Array [
  <div
    className="lumx-flex-box"
  >
    <FlexBox>
      <Icon
        icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
      />
    </FlexBox>
    <FlexBox>
      Some text in a div
    </FlexBox>
    <FlexBox>
      <Button
        emphasis="high"
        size="m"
        theme="light"
      >
        OK
      </Button>
    </FlexBox>
  </div>,
  <div
    className="lumx-flex-box"
  >
    <Icon
      icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
    />
  </div>,
  <div
    className="lumx-flex-box"
  >
    Some text in a div
  </div>,
  <div
    className="lumx-flex-box"
  >
    <Button
      emphasis="high"
      size="m"
      theme="light"
    >
      OK
    </Button>
  </div>,
]
`;

exports[`<FlexBox> Snapshots and structure should render story 'HorizontalFlex' 1`] = `
Array [
  <div
    className="lumx-flex-box lumx-flex-box--orientation-horizontal"
    style={
      Object {
        "border": "1px solid red",
        "height": "300px",
      }
    }
  >
    <Button
      emphasis="high"
      size="m"
      theme="light"
    >
      Default
    </Button>
    <FlexBox
      hAlign="top"
    >
      <Button
        emphasis="high"
        size="m"
        theme="light"
      >
        Top
      </Button>
    </FlexBox>
    <FlexBox
      fillSpace={true}
      hAlign="center"
      vAlign="center"
    >
      <Button
        emphasis="high"
        size="m"
        theme="light"
      >
        Center button
      </Button>
    </FlexBox>
    <FlexBox
      hAlign="bottom"
    >
      <Button
        emphasis="high"
        size="m"
        theme="light"
      >
        Bottom
      </Button>
    </FlexBox>
  </div>,
  <div
    className="lumx-flex-box lumx-flex-box--orientation-horizontal lumx-flex-box--h-align-top"
  >
    <Button
      emphasis="high"
      size="m"
      theme="light"
    >
      Top
    </Button>
  </div>,
  <div
    className="lumx-flex-box lumx-flex-box--orientation-horizontal lumx-flex-box--v-align-center lumx-flex-box--h-align-center lumx-flex-box--fill-space"
  >
    <Button
      emphasis="high"
      size="m"
      theme="light"
    >
      Center button
    </Button>
  </div>,
  <div
    className="lumx-flex-box lumx-flex-box--orientation-horizontal lumx-flex-box--h-align-bottom"
  >
    <Button
      emphasis="high"
      size="m"
      theme="light"
    >
      Bottom
    </Button>
  </div>,
]
`;

exports[`<FlexBox> Snapshots and structure should render story 'NoShrinkFlex' 1`] = `
Array [
  <div
    className="lumx-flex-box lumx-flex-box--orientation-horizontal"
    style={
      Object {
        "border": "1px solid red",
        "width": "150px",
      }
    }
  >
    <Button
      emphasis="high"
      size="m"
      theme="light"
    >
      Button
    </Button>
    <FlexBox
      noShrink={true}
    >
      Some long text
    </FlexBox>
    <Button
      emphasis="high"
      size="m"
      theme="light"
    >
      Button
    </Button>
  </div>,
  <div
    className="lumx-flex-box lumx-flex-box--no-shrink"
  >
    Some long text
  </div>,
]
`;

exports[`<FlexBox> Snapshots and structure should render story 'VerticalFlex' 1`] = `
Array [
  <div
    className="lumx-flex-box lumx-flex-box--orientation-vertical"
    style={
      Object {
        "border": "1px solid red",
        "height": "300px",
      }
    }
  >
    <Button
      emphasis="high"
      size="m"
      theme="light"
    >
      Default
    </Button>
    <FlexBox
      vAlign="left"
    >
      <Button
        emphasis="high"
        size="m"
        theme="light"
      >
        Left
      </Button>
    </FlexBox>
    <FlexBox
      fillSpace={true}
      hAlign="center"
      vAlign="center"
    >
      <Button
        emphasis="high"
        size="m"
        theme="light"
      >
        Center button
      </Button>
    </FlexBox>
    <FlexBox
      vAlign="right"
    >
      <Button
        emphasis="high"
        size="m"
        theme="light"
      >
        Right
      </Button>
    </FlexBox>
  </div>,
  <div
    className="lumx-flex-box lumx-flex-box--orientation-horizontal lumx-flex-box--v-align-left"
  >
    <Button
      emphasis="high"
      size="m"
      theme="light"
    >
      Left
    </Button>
  </div>,
  <div
    className="lumx-flex-box lumx-flex-box--orientation-horizontal lumx-flex-box--v-align-center lumx-flex-box--h-align-center lumx-flex-box--fill-space"
  >
    <Button
      emphasis="high"
      size="m"
      theme="light"
    >
      Center button
    </Button>
  </div>,
  <div
    className="lumx-flex-box lumx-flex-box--orientation-horizontal lumx-flex-box--v-align-right"
  >
    <Button
      emphasis="high"
      size="m"
      theme="light"
    >
      Right
    </Button>
  </div>,
]
`;

exports[`<FlexBox> Snapshots and structure should render story 'WrapFlex' 1`] = `
Array [
  <div
    className="lumx-flex-box lumx-flex-box--orientation-horizontal lumx-flex-box--wrap"
    style={
      Object {
        "border": "1px solid red",
        "width": "150px",
      }
    }
  >
    <FlexBox
      fillSpace={true}
      orientation="vertical"
    >
      <Button
        emphasis="high"
        size="m"
        theme="light"
      >
        Button
      </Button>
    </FlexBox>
    <Button
      emphasis="high"
      size="m"
      theme="light"
    >
      Button
    </Button>
    <Button
      emphasis="high"
      size="m"
      theme="light"
    >
      Button
    </Button>
  </div>,
  <div
    className="lumx-flex-box lumx-flex-box--orientation-vertical lumx-flex-box--fill-space"
  >
    <Button
      emphasis="high"
      size="m"
      theme="light"
    >
      Button
    </Button>
  </div>,
]
`;
